# mdbook-typst-highlight

./: Cargo.toml  README.md
example-book/: book.toml
example-book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md
res/: Typst.sublime-syntax
src/: lib.rs  main.rs
